@@ -1,5 +1,14 @@
 2012-06-11 Miguel de Dios <miguel.dedios@artica.es>
 	
+	* include/functions_visual_map.php: cleaned source code style.
+	
+	* include/ajax/visual_console_builder.ajax.php,
+	godmode/reporting/visual_console_builder.editor.js: fixed the set
+	status to items when change somethings that module or method to get
+	status that agent to module status item.
+
+2012-06-11 Miguel de Dios <miguel.dedios@artica.es>
+	
 	* include/graphs/functions_gd.php, include/graphs/fgraph.php:
 	cleaned source code style.
 	
